--- a/site/index.html
+++ b/site/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Screw you coursera</title>
+	<title>Hello Coursera</title>
 </head>
 <body>
 <h1>Howdy</h1>
