Mod2 homework beta

--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello Coursera!</title>
+	<title>Cousera Projects</title>
 </head>
 <body>
-<h1>Howdy Y'all</h1>
+<h1><a href="mod2_solution/index.html">Module 2 project</a></h1>
 </body>
 </html>
