--- a/site/mod2_solution/index.html
+++ b/site/mod2_solution/index.html
@@ -4,199 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Mod2_solution</title>
-<style>
-
-/********** Base styles **********/
-* {
-  box-sizing: border-box;
-}
-
-p {
-  background-color: #eeeeee;
-  margin: 5%;
-  width: 90%;
-  height: 550px;
-  font-family: Helvetica;
-  padding: 15px;
-  padding-top: 45px;
-  border: 1px solid black;
-}
-
-h1{
-  text-align: center;
-  font-size: 400%;
-}
-
-#container {
-  position: relative;
-}
-
-.topRight {
-  position: absolute;
-  right: 0%;
-  height: 30px;
-  width: 25%;
-  padding: .6%;
-  border: 1px solid black;
-  text-align: center;
-  font-weight: bold;
-}
-
-#blue {
-  background-color: #aaaaff;
-}
-
-#yellow {
-  background-color: #ffffaa;
-}
-
-#green {
-  background-color: #aaffaa;
-}
-
-/* Simple Responsive Framework. */
-.row {
-  width: 100%;
-}
-
-/********** Desktop **********/
-@media (min-width: 992px) {
-  .col-d-1, .col-d-2, .col-d-3, .col-d-4, .col-d-5, .col-d-6, .col-d-7, .col-d-8, .col-d-9, .col-d-10, .col-d-11, .col-d-12 {
-    float: left;
-  }
-  .col-d-1 {
-    width: 8.33%;
-  }
-  .col-d-2 {
-    width: 16.66%;
-  }
-  .col-d-3 {
-    width: 25%;
-  }
-  .col-d-4 {
-    width: 33.33%;
-  }
-  .col-d-5 {
-    width: 41.66%;
-  }
-  .col-d-6 {
-    width: 50%;
-  }
-  .col-d-7 {
-    width: 58.33%;
-  }
-  .col-d-8 {
-    width: 66.66%;
-  }
-  .col-d-9 {
-    width: 74.99%;
-  }
-  .col-d-10 {
-    width: 83.33%;
-  }
-  .col-d-11 {
-    width: 91.66%;
-  }
-  .col-d-12 {
-    width: 100%;
-  }
-}
-
-/********** Tablet **********/
-@media (min-width: 768px) and (max-width: 991px) {
-  .col-t-1, .col-t-2, .col-t-3, .col-t-4, .col-t-5, .col-t-6, .col-t-7, .col-t-8, .col-t-9, .col-t-10, .col-t-11, .col-t-12 {
-    float: left;
-  }
-  .col-t-1 {
-    width: 8.33%;
-  }
-  .col-t-2 {
-    width: 16.66%;
-  }
-  .col-t-3 {
-    width: 25%;
-  }
-  .col-t-4 {
-    width: 33.33%;
-  }
-  .col-t-5 {
-    width: 41.66%;
-  }
-  .col-t-6 {
-    width: 50%;
-  }
-  .col-t-7 {
-    width: 58.33%;
-  }
-  .col-t-8 {
-    width: 66.66%;
-  }
-  .col-t-9 {
-    width: 74.99%;
-  }
-  .col-t-10 {
-    width: 83.33%;
-  }
-  .col-t-11 {
-    width: 91.66%;
-  }
-  .col-t-12 {
-    width: 100%;
-  }
-
-  .third {
-  	margin: 2.5%;
-  }
-  #biggen {
-  	width: 95%;
-  }
-}
-
-/********** Mobile **********/
-@media (max-width: 767px) {
-  .col-m-1, .col-m-2, .col-m-3, .col-m-4, .col-m-5, .col-m-6, .col-m-7, .col-m-8, .col-m-9, .col-m-10, .col-m-11, .col-m-12 {
-    float: left;
-
-  }
-  .col-m-1 {
-    width: 8.33%;
-  }
-  .col-md-2 {
-    width: 16.66%;
-  }
-  .col-m-3 {
-    width: 25%;
-  }
-  .col-m-4 {
-    width: 33.33%;
-  }
-  .col-m-5 {
-    width: 41.66%;
-  }
-  .col-m-6 {
-    width: 50%;
-  }
-  .col-m-7 {
-    width: 58.33%;
-  }
-  .col-m-8 {
-    width: 66.66%;
-  }
-  .col-m-9 {
-    width: 74.99%;
-  }
-  .col-m-10 {
-    width: 83.33%;
-  }
-  .col-m-11 {
-    width: 91.66%;
-  }
-  .col-m-12 {
-    width: 100%;
-  }
-}
-
-</style>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 <h1>All Star Lyrics</h1>
