--- a/site/index.html
+++ b/site/index.html
@@ -6,5 +6,6 @@
 <body>
 <h2><a href="mod2_solution/index.html">Module 2 project</a></h2>
 <h2><a href="mod3_solution/index.html">Module 3 project</a></h2>
+<h2><a href="mod4_solution/index.html">Module 4 project</a></h2>
 </body>
 </html>
